Fixed overflow and centered sidebar items

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -6,8 +6,9 @@
 .container {
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 2fr 1fr 10fr 1fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 50px 1fr 50px;
+  gap: 5px;
 }
 
 .container div {
@@ -21,7 +22,7 @@
 .header {
   background-color: #393f4d;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
   align-items: center;
   grid-column: 1 / -1;
 }
@@ -70,6 +71,12 @@
   font-weight: normal;
 }
 
+.sidebar .side-content,
+.sidebar .photo {
+  display: grid;
+  align-items: center;
+}
+
 .nav {
   background-color: #FF7755;
   grid-column: 2 / -1;
@@ -90,9 +97,12 @@
   background-color: #bccbde;
   grid-column: 2 / -1;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
+}
+
+.article .title {
+  margin-bottom: 10px;
 }
 
 .article p {
@@ -106,6 +116,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
